force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__AcademicTermSeason__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicTermSeason__c</fullName>
    <label>Academic Season</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicTermSeason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>