force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__AcademicTermType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicTermType__c</fullName>
    <label>Academic Term Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicTermType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>