force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__GradingPeriodSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__GradingPeriodSequenceNumber__c</fullName>
    <label>Grading Period Sequence</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GradingPeriodSequenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>