force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__InstructionalDaysCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__InstructionalDaysCount__c</fullName>
    <label>Instructional Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InstructionalDaysCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>