force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__LateRegistrationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LateRegistrationDateTime__c</fullName>
    <label>Late Registration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LateRegistrationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>