force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__ParentAcademicTermId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentAcademicTermId__c</fullName>
    <label>Parent Academic Term</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentAcademicTermId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>