force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__RegistrationCloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegistrationCloseDateTime__c</fullName>
    <label>Registration Close Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegistrationCloseDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>