force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__RegistrationOpenDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegistrationOpenDateTime__c</fullName>
    <label>Registration Open Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegistrationOpenDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>