force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__rel_1719817600636_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817600636_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicTerm_ParentAcademicTermId_ma_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>AcademicTerm_ParentAcademicTermId_ma_rel</relationshipLabel>
    <relationshipName>rel_1719817600636_end</relationshipName>
    <type>Lookup</type>
</CustomField>