force-app/main/default/objects/ssot__AcademicTerm__dlm/fields/ssot__rel_1719817647974_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817647974_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicTerm_AcademicYearId_map_Acad_rel</label>
    <referenceTo>ssot__AcademicYear__dlm</referenceTo>
    <relationshipLabel>AcademicTerm_AcademicYearId_map_Acad_rel</relationshipLabel>
    <relationshipName>rel_1719817647974_end</relationshipName>
    <type>Lookup</type>
</CustomField>